// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render the short version 1`] = `
<div
  class="ceNfgA"
>
  <header
    class="jqIeQP"
  >
    <h1
      class="fUOwIt"
    >
      <a
        class="cNDnBw"
        href="http://data.amsterdam.nl"
      >
        <span
          class="dhaUoM"
        />
      </a>
      <a
        class="erGoLP"
        href="http://data.amsterdam.nl"
      >
        Data en informatie
      </a>
    </h1>
    <div
      class="AcJgs"
    >
      <p
        class="sc-jhAzac bYXyyr"
      >
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis, dicta incidunt maxime necessitatibus voluptatibus.
      </p>
    </div>
  </header>
</div>
`;

exports[`Header should render the short version without the full width 1`] = `
<div
  class="bfoEIs"
>
  <header
    class="kXgeVV"
  >
    <h1
      class="fUOwIt"
    >
      <a
        class="cNDnBw"
        href="http://data.amsterdam.nl"
      >
        <span
          class="dhaUoM"
        />
      </a>
      <a
        class="erGoLP"
        href="http://data.amsterdam.nl"
      >
        Data en informatie
      </a>
    </h1>
    <div
      class="AcJgs"
    >
      <p
        class="sc-fBuWsC iAOzqM"
      >
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis, dicta incidunt maxime necessitatibus voluptatibus.
      </p>
    </div>
  </header>
</div>
`;

exports[`Header should render the tall version 1`] = `
<div
  class="EorMi"
>
  <header
    class="jqIeQP"
  >
    <h1
      class="fUOwIt"
    >
      <a
        class="jYwlpc"
        href="http://data.amsterdam.nl"
      >
        <span
          class="dhaUoM"
        />
      </a>
      <a
        class="erGoLP"
        href="http://data.amsterdam.nl"
      >
        Data en informatie
      </a>
    </h1>
    <div
      class="AcJgs"
    >
      <p
        class="sc-fMiknA ktjjkD"
      >
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis, dicta incidunt maxime necessitatibus voluptatibus.
      </p>
    </div>
  </header>
</div>
`;

exports[`Header should render the tall version without a title 1`] = `
<div
  class="EorMi"
>
  <header
    class="jqIeQP"
  >
    <h1
      class="fUOwIt"
    >
      <a
        class="jYwlpc"
        href="http://data.amsterdam.nl"
      >
        <span
          class="dhaUoM"
        />
      </a>
    </h1>
    <div
      class="AcJgs"
    >
      <p
        class="sc-dVhcbM cMYCyS"
      >
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis, dicta incidunt maxime necessitatibus voluptatibus.
      </p>
    </div>
  </header>
</div>
`;
